--- a/package.json
+++ b/package.json
@@ -4,7 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+
+    "build": "npm i -ws && npm run build -ws",
+    "dev": "nodemon --watch server server/index.js",
+    "start": "node server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "workspaces": [
+    "client"
+  ],
+  "dependencies": {
+    "mongodb": "^4.12.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   },
   "repository": {
     "type": "git",
