--- a/Client/tsconfig.json
+++ b/Client/tsconfig.json
@@ -8,7 +8,7 @@
       "@/*": ["./src/*"]
     }
   },
-
+  "declarationDir": "types",
   "references": [
     {
       "path": "./tsconfig.config.json"
