--- a/Client/package.json
+++ b/Client/package.json
@@ -17,15 +17,18 @@
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
+    "@rollup/plugin-typescript": "^8.3.3",
     "@rushstack/eslint-patch": "^1.1.4",
     "@types/node": "^16.11.63",
+    "@typescript-eslint/eslint-plugin": "^5.45.1",
+    "@typescript-eslint/parser": "^5.45.1",
     "@vitejs/plugin-vue": "^3.0.3",
     "@vitejs/plugin-vue-jsx": "^2.0.1",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/tsconfig": "^0.1.3",
     "eslint": "^8.22.0",
-    "eslint-plugin-vue": "^9.3.0",
+    "eslint-plugin-vue": "^9.8.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "sass": "^1.55.0",
