--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express": "^4.18.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "@rollup/plugin-typescript": "8.3.3"
   },
   "repository": {
     "type": "git",
