--- a/Client/package.json
+++ b/Client/package.json
@@ -1,14 +1,18 @@
 {
   "name": "client",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check build-only",
     "preview": "vite preview --port 4173",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "start": "node Server/index.js"
   },
+  "workspaces":[
+    "client"
+  ],
   "dependencies": {
     "@fortawesome/fontawesome-free": "6.2.0",
     "bulma": "^0.9.4",
