--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
 
-    "build": "npm i -ws && npm run build -ws",
+    "build": "npm i && npm run build",
     "dev": "nodemon --watch server server/index.js",
-    "start": "node server/index.js"
+    "start": "npm run start"
   },
   "workspaces": [
     "client"
