--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-
-    "build": "npm i && npm run build",
+    "build": "npm i -ws && npm run build -ws",
     "dev": "nodemon --watch server server/index.js",
-    "start": "npm run start"
+    "start": "node server/index.js"
   },
   "workspaces": [
     "client"
